<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/add_select_team"
        android:layout_margin="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/sort_options"
            android:prompt="@string/sort_prompt" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        android:orientation="horizontal"
        android:padding="5dp">

        <!-- Service name -->

        <!-- Service details -->

        <TextView
            android:id="@+id/add_author"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stat_headline"
            android:layout_toLeftOf="@+id/item_price"

            android:text="author"
            android:textSize="15sp"
            android:layout_marginLeft="5dp" />

        <!-- Service price -->

        <TextView
            android:id="@+id/add_date"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/stat_headline"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:text="date"
            android:textSize="15sp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/add_select_desc_name"
        android:layout_marginLeft="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_desc_name"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <Button
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_margin="5dp"
            android:background="@color/colorAccent"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:id="@+id/add_btn_submit"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
    </LinearLayout>

</LinearLayout>