<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ProgressBar android:id="@+id/add_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CreatDecLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:id="@+id/add_take_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_camera"
                android:text=""/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/create_decision"
            android:textColor="@color/textFieldColor"
            android:textStyle="bold"
            android:gravity="center"
            android:id="@+id/search_detail_title"
            android:layout_gravity="center" />
        </LinearLayout>

        <View style="@style/ListDivider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/add_select_team"
        android:layout_margin="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <Spinner
            android:id="@+id/teamchoosspinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View style="@style/ListDivider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/add_select_desc_name"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_desc_name"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:hint="Enter decision name here"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginBottom="5dp" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/addDec_image_view"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <Button
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_margin="5dp"
            android:background="@color/colorAccent"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:id="@+id/add_btn_submit"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
    </LinearLayout>

</LinearLayout>

</RelativeLayout>